@startuml
class SubscriptionController {
 +findOne(Long id)
}



class SubscriptionService {
 +findOne(Long id): Result
}
class SubscriptionServiceImpl{
+findByUser(user)
+ResponseEntity.ok()
}

interface SubscriptionRepository <<interface>> {

}


class Subscription {
    -id
    -subType
    -date
    -subState
    -feeType
    Subscription(int id, string subType, date date, string subState, string feeType)
    +getID(): int
    +getSubType(): string
    +getDate(): date
    +getSubState(): string
    +getFeeType(): string

}

SubscriptionRepository "1" --> "0..*" Subscription:  records
SubscriptionController ..> SubscriptionService
SubscriptionServiceImpl ..> SubscriptionRepository
SubscriptionServiceImpl ..> Subscription
SubscriptionService ..> Subscription
SubscriptionServiceImpl .up.|> SubscriptionService
@enduml